fix: wrong font name

--- a/dev/style.css
+++ b/dev/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "JetBrainsMono Nerd Font";
-    src: url("./fonts/JetBrainsMono Nerd Font.ttf") format("truetype");
+    src: url("./fonts/JetBrains-Mono-Nerd-Font-Complete.ttf") format("truetype");
 }
 
 body {
@@ -23,7 +23,6 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    gap: 1em;
 }
 
 img {
@@ -53,22 +52,22 @@ img {
     font-family: "JetBrainsMono Nerd Font";
 }
 
+.mail-icon:before {
+    content: "\f42f";
+    font-size: 2em;
+}
+
 .github-icon:before {
     content: "\f09b";
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .gitea-icon:before {
     content: "\e702";
-    font-size: 3em;
+    font-size: 2.8em;
 }
 
 .paste-icon:before {
     content: "\f429";
-    font-size: 3em;
-}
-
-.mail-icon:before {
-    content: "\eb1c";
-    font-size: 3em;
+    font-size: 2.2em;
 }
